<resources>
    <string name="app_name">Control de Dispensador</string>
    <string name="registrarse">Registrarse</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="candado">Candado</string>
    <string name="nombre">Nombre</string>
    <string name="Id">ID</string>
    <string name="enfermero_a">Enfermero/a</string>
    <string name="registrate">Registrate</string>
    <string name="todo">TODO</string>
    <string name="mac">MAC:</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo:</string>
    <string name="lista_de_dispositivos">Lista de Dispositivos</string>
    <string name="enlazar_dispositivos">Enlazar dispositivos</string>
    <string name="salir">Salir</string>
    <string name="siguiente">Siguiente</string>
    <string name="tanque_1">Tanque 1</string>
    <string name="tanque_2">Tanque 2</string>
    <string name="tanque_3">Tanque 3</string>
    <string name="tanque_4">Tanque 4</string>
    <string name="guardar">Guardar</string>
    <string name="medicamento">Medicamento</string>
    <string name="cantidad_ml_cc">Cantidad (ml, cc)</string>
    <string name="hora_hh_mm">Hora: HH/MM</string>
    <string name="fecha_dd_mm_aaaa">Fecha: DD/MM/AAAA</string>
    <string name="agregar_nueva_tarea">Agregar nueva tarea</string>
    <string name="hora">Hora</string>
    <string name="fecha">Fecha</string>
    <string name="tanque">Tanque</string>
    <string name="lista_de_tareas">Lista de tareas</string>
    <string name="modificar_tarea">Modificar tarea</string>
    <string name="Task">Task</string>
    <string name="tarea_n">Tarea N°:</string>
    <string name="id">ID:</string>
    <string name="cantidad_ml_cc_">Cantidad (ml/cc):</string>
    <string name="medicamentox">Medicamento:</string>
    <string name="tanque_n">"Tanque N°: "</string>
    <string name="fecha_y_horas">Fecha y Hora:</string>
</resources>