<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/cv_task_id4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tarea_n"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_id_tarea4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/id"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_medicamento4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/medicamentox"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_cantidad4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cantidad_ml_cc_"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tanque4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tanque_n"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_horayfecha4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fecha_y_horas"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cv_task_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Task"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_id_tarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Id"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_medicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/medicamento"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_cantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cantidad_ml_cc"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tanque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tanque"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cv_horayfecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hora"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>